--- a/css/Si-cle-hp.css
+++ b/css/Si-cle-hp.css
@@ -113,7 +113,7 @@ span {
   color: black;
   font-size: 4vw;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255);
 }
 
 #About-us h2{
